Fix status alignment

--- a/www/guis/admin/public/templates/default/css/main.css
+++ b/www/guis/admin/public/templates/default/css/main.css
@@ -57,7 +57,7 @@
 #statuslist {
     margin: 0px;
     margin-left: 108px;
-    margin-top: 7px;
+    margin-top: 11px;
     padding: 0px;
     list-style-type: none;
     color: #ED7B00;
